<resources>
    <string name="app_name">1x1Trainer</string>
    <string name="shared_preferences_highscore">shared_preferences_highscore</string>
    <string name="kurzspiel_bubble_line1">Hallo! Ich bin Wurmi.</string>
    <string name="kurzspiel_bubble_line2">Bitte hilf mir auf dem Heimweg.</string>
    <string name="kurzspiel_play">SPIELEN</string>
    <string name="kurzspiel_title">KURZSPIEL</string>
    <string name="intent_extra_game_mode">MODE</string>
    <string name="intent_extra_game">GAME</string>
    <string name="login_response_prop_accepted">accepted</string>
    <string name="login_response_prop_hmac">hmac</string>
    <string name="login_response_prop_id_user">idUser</string>
    <string name="login_response_prop_message">message</string>
    <string name="login_title">EINLOGGEN</string>
    <string name="get_question_response_prop_answer">answer</string>
    <string name="get_question_response_prop_id">id</string>
    <string name="get_question_response_prop_label">label</string>
    <string name="onboarding_description_1">Schreibe die Zahlen mit deinem Finger.</string>
    <string name="onboarding_description_2">Probier es aus.</string>
    <string name="onboarding_user_input">Deine Eingabe:</string>
    <string name="onboarding_delete_button">LÖSCHEN</string>
    <string name="onboarding_go_button">LOS</string>
    <string name="onboarding_go_titlebar">ANLEITUNG</string>
    <string name="property_name_activity_progress">progress</string>
    <string name="result_titlebar">ERGEBNIS</string>
    <string name="postquiz_titlebar">ERGEBNIS</string>
    <string name="postquiz_solved_questions_text">Gelöste Aufgaben:</string>
    <string name="postquiz_score_text">Punkte:</string>
    <string name="postquiz_hint">Bitte Namen eingeben...</string>
    <string name="scoreboard_titlebar">BESTENLISTE</string>
    <string name="scoreboard_table_header_name">NAME</string>
    <string name="scoreboard_table_header_score">PUNKTE</string>
    <string name="start_kuzspiel_button">KURZSPIEL</string>
    <string name="start_trainer">TRAINER</string>
    <string name="login_name">Name:</string>
    <string name="login_passowrd">Passwort:</string>
    <string name="login_register">BIST DU NEU?</string>
    <string name="login_register_url">https://schule.learninglab.tugraz.at/user/register</string>
    <string name="login_invalid_input_err_msg">Bitte Name und Passowrt eingeben</string>
    <string name="login_login_failed_err_msg">Name oder Passwort inkorrekt</string>
    <string name="help_line1">TRAINER: Ein Webbasiertes Trainigsystem für das du ein Konto benötigst. Dein Lernfortschritt wird online gespeichtert.</string>
    <string name="help_line2">KURZSPIEL: Ein simples 1x1-Spiel, bei dem es darum geht, die höchstmögliche Punkezahl zu erreichen.</string>
    <string name="help_line3">Code &amp; Design: Manuel Hess, TU Graz 2019</string>
    <string name="param_get_session_response">getSessionResponse</string>
    <string name="param_get_question_response">getQuestionResponse</string>
    <string name="param_give_answer_response">giveAnswerResponse</string>
    <string name="quiz_feedback_true">RICHTIG!</string>
    <string name="quiz_feedback_false">FALSCH!</string>
    <string name="quiz_ok_btn">OK</string>
    <string name="quiz_clear_btn">LÖSCHEN</string>
    <string name="quiz_countdown_init">60</string>
    <string name="empty_string"></string>
    <string name="zero">0</string>
</resources>
