<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/start_trainer_btn"
        android:layout_width="195dp"
        android:layout_height="60dp"
        android:background="@mipmap/button_orange"
        android:fontFamily="sans-serif"
        android:shadowColor="@color/black"
        android:shadowDy="-5"
        android:shadowRadius="5"
        android:text="@string/start_trainer"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_kurzspiel_btn"
        android:layout_width="195dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@mipmap/button_orange"
        android:fontFamily="sans-serif"
        android:shadowColor="@color/black"
        android:shadowDy="-5"
        android:shadowRadius="5"
        android:text="@string/start_kuzspiel_button"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_trainer_btn" />


    <Button
        android:id="@+id/start_help_btn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@mipmap/button_help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/start_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:background="@mipmap/title"
        app:layout_constraintBottom_toTopOf="@+id/start_trainer_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/start_help_modal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@mipmap/panel"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/start_help_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/start_help_line_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="casual"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:text="@string/help_line2"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/start_help_modal"
        app:layout_constraintEnd_toEndOf="@id/start_help_modal"
        app:layout_constraintStart_toStartOf="@id/start_help_modal"
        app:layout_constraintTop_toTopOf="@id/start_help_modal" />

    <TextView
        android:id="@+id/start_help_line_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:text="@string/help_line1"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/start_help_line_2"
        app:layout_constraintEnd_toEndOf="@+id/start_help_line_2"
        app:layout_constraintStart_toStartOf="@+id/start_help_line_2" />

    <TextView
        android:id="@+id/start_help_line_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:text="@string/help_line3"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/start_help_line_2"
        app:layout_constraintStart_toStartOf="@+id/start_help_line_2"
        app:layout_constraintTop_toBottomOf="@+id/start_help_line_2" />

    <Button
        android:id="@+id/start_help_back_btn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@mipmap/button_back"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/start_tugraz_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_tu_graz"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_kurzspiel_btn"
        app:layout_constraintTop_toBottomOf="@+id/start_help_modal" />


</android.support.constraint.ConstraintLayout>