<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <Button
        android:id="@+id/login_register_btn"
        android:layout_width="195dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_corner"
        android:text="@string/login_register"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_back_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/login_background_modal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:background="@android:color/darker_gray"
        android:visibility="visible"
        app:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/login_register_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:color/darker_gray"
        tools:srcCompat="@android:color/darker_gray" />

    <EditText
        android:id="@+id/login_username_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textVisiblePassword|textNoSuggestions"
        app:layout_constraintEnd_toEndOf="@+id/login_background_modal"
        app:layout_constraintStart_toEndOf="@+id/login_password_text"
        app:layout_constraintTop_toTopOf="@+id/login_background_modal" />

    <TextView
        android:id="@+id/login_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/login_name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/login_username_input"
        app:layout_constraintStart_toStartOf="@+id/login_background_modal" />

    <TextView
        android:id="@+id/login_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/login_passowrd"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/login_password_input"
        app:layout_constraintStart_toStartOf="@+id/login_background_modal" />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/login_background_modal"
        app:layout_constraintStart_toEndOf="@+id/login_password_text"
        app:layout_constraintTop_toBottomOf="@+id/login_username_input" />

    <Button
        android:id="@+id/login_login_btn"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/login_register_btn"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_background_modal" />

    <TextView
        android:id="@+id/login_error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintBottom_toTopOf="@+id/login_login_btn"
        app:layout_constraintEnd_toEndOf="@+id/login_background_modal"
        app:layout_constraintStart_toStartOf="@+id/login_background_modal"
        app:layout_constraintTop_toBottomOf="@+id/login_password_input" />

    <ImageView
        android:id="@+id/login_titlebar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="24dp"
        android:src="@android:color/holo_green_dark"
        app:layout_constraintBottom_toTopOf="@+id/login_username_input"
        app:layout_constraintEnd_toEndOf="@+id/login_background_modal"
        app:layout_constraintStart_toStartOf="@+id/login_background_modal"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/holo_green_dark" />

    <TextView
        android:id="@+id/login_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/login_titlebar"
        app:layout_constraintEnd_toEndOf="@+id/login_titlebar"
        app:layout_constraintStart_toStartOf="@+id/login_titlebar"
        app:layout_constraintTop_toTopOf="@+id/login_titlebar" />

</android.support.constraint.ConstraintLayout>